# FFT_in_Finite_Fields_Reed_Solomon_Error_Correction

./: .gitignore  CMakeLists.txt  README.md  RS_Decoder.cpp  RS_Encoder.cpp  RS_Encoder.hpp  RS_NTT_tool.cpp  RS_NTT_tool.hpp  RS_tools.cpp  RS_tools.hpp  main.cpp  makefile  rs_test.m
.github/workflows/: c-cpp.yml
HW/VHDL_RS_ECC/: RS_ENCODER.vhd
HW/rs_enc/: rs_enc.xpr  tb_rsenc_top_behav.wcfg
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/: compile.bat  elaborate.bat  rsenc_top_level_behav.wdb  simulate.bat  tb_chimere_in_behav.wdb  tb_chimere_in_vhdl.prj  tb_rs_encoder_behav.wdb  tb_rsenc_top_behav.wdb  xelab.pb  xvhdl.pb
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/xsim.dir/rsenc_top_level_behav/: Compile_Options.txt  xsim.dbg  xsim.mem  xsim.rtti  xsim.type  xsim.xdbg
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/xsim.dir/tb_chimere_in_behav/: Compile_Options.txt  xsim.dbg  xsim.mem  xsim.reloc  xsim.rlx  xsim.rtti  xsim.type  xsim.xdbg
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/xsim.dir/tb_rs_encoder_behav/: Compile_Options.txt  TempBreakPointFile.txt  xsim.mem  xsim.reloc  xsim.rlx  xsim.rtti  xsim.type  xsim.xdbg
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/xsim.dir/tb_rsenc_top_behav/: Compile_Options.txt  xsim.dbg  xsim.type  xsim.xdbg
HW/rs_enc/rs_enc.sim/sim_1/behav/xsim/xsim.dir/xil_defaultlib/: add.vdb  bascule.vdb  codeword.vdb  control_sys.vdb  cpt_decl.vdb  cpt_rot.vdb  fsm.vdb  num_selec.vdb  pc_rs.vdb  plugboard.vdb  ram_rot.vdb  ram_rot_inv.vdb  reflecteur.vdb  rotor.vdb  rotor_inv.vdb  (+11 more)
HW/rs_enc/rs_enc.srcs/sim_1/new/: tb_chimere_in.vhd
HW/rs_enc/rs_enc.srcs/sources_1/imports/eni_vhdl/: Cpt_rot.vhd  FSM.vhd  Rotor.vhd  Rotor_inv.vhd  Traitement.vhd  cpt_decl.vhd  num_selec.vhd  plug_board.vhd  transmitter.vhd
HW/rs_enc/rs_enc.srcs/sources_1/imports/src_vhdl/: CodeWord.vhd  RS_ENCODER.vhd  rsenc_top_level.vhd
HW/rs_enc/rs_enc.srcs/sources_1/new/: TX_CHIMERE.vhd  control_sys.vhd
SW/: CMakeLists.txt
SW/include/: RS_Decoder.hpp  RS_Encoder.hpp  RS_tools.hpp
SW/matlab/: rs_test.m
SW/rs/: CMakeLists.txt  README.md  build.sh
SW/rs/src/: main.cpp
SW/rs/src/custom/: Comparator.hpp  Decoder_RS.cpp  Decoder_RS.hpp  Encoder_RS.cpp  Encoder_RS.hpp  NTL_ENCODER_RS.cpp  RS_Decoder.hpp  RS_ENCODER_NTL.cpp  RS_ENCODER_NTL.hpp  RS_tools.cpp  error_injector.cpp  error_injector.hpp
SW/src/: RS_Decoder.cpp  RS_ENCODER_NTL.cpp  RS_Encoder.cpp  main.cpp
VHDL/EncoderDecoderRS/: EncoderDecoderRS.xpr
VHDL/EncoderDecoderRS/EncoderDecoderRS.cache/sim/: ssm.db
VHDL/EncoderDecoderRS/EncoderDecoderRS.sim/sim_1/behav/xsim/: compile.bat  elaborate.bat  simulate.bat  tb_rs_encoder_behav.wdb  tb_rs_encoder_vhdl.prj  xelab.pb  xvhdl.pb
VHDL/EncoderDecoderRS/EncoderDecoderRS.srcs/sim_1/new/: tb_rs_encoder.vhd
VHDL/EncoderDecoderRS/EncoderDecoderRS.srcs/sources_1/new/: RS_ENCODER.vhd  rs_pkg.vhd
VHDL/RS_ENCODER/: RS_ENCODER.xpr  tb_rs_encoder_behav.wcfg
VHDL/RS_ENCODER/RS_ENCODER.cache/sim/: ssm.db
VHDL/RS_ENCODER/RS_ENCODER.sim/sim_1/behav/xsim/: compile.bat  elaborate.bat  simulate.bat  tb_rs_encoder_behav.wdb  tb_rs_encoder_vhdl.prj  xelab.pb  xvhdl.pb
VHDL/rs_enc/: rs_enc.xpr  tb_rsenc_top_behav.wcfg
VHDL/rs_enc/rs_enc.cache/sim/: ssm.db
VHDL/rs_enc/rs_enc.sim/sim_1/behav/xsim/: compile.bat  elaborate.bat  simulate.bat  tb_rsenc_top_vhdl.prj  xelab.pb  xvhdl.pb
VHDL/rs_enc/rs_enc.srcs/sim_1/imports/src_vhdl/: tb_rs_encoder.vhd
VHDL/rs_enc/rs_enc.srcs/sources_1/imports/src_vhdl/: pc_rs.vhd  rsenc_top_level.vhd
VHDL/rs_encoder_old/: rs_encoder.xpr
VHDL/rs_encoder_old/rs_encoder.srcs/sources_1/new/: rs_encoder.vhd
WinNTL-11_6_0/include/NTL/: config.h
include/: RS_Decoder.hpp  RS_Encoder.hpp  RS_tools.hpp
matlab/: rs_test.m
rs/: CMakeLists.txt  README.md  build.sh
rs/src/: main.cpp
rs/src/custom/: Comparator.cpp  Comparator.hpp  Decoder_RS.cpp  Decoder_RS.hpp  Encoder_RS.cpp  Encoder_RS.hpp  NTL_ENCODER_RS.hpp  RS_Decoder.cpp  RS_Decoder.hpp  RS_ENCODER_NTL.cpp  RS_Encoder.cpp  RS_Encoder.hpp  RS_tools.cpp  RS_tools.hpp  berlekamp.hpp  error_injector.cpp
rs_encoder/rs_encoder.srcs/sources_1/new/: rs_encoder.vhd
src/: RS_Decoder.cpp  RS_Encoder.cpp  RS_Encoder.hpp  RS_tools.cpp  berlekamp.cpp  main.cpp
src/custom/: Decoder_RS.cpp  RS_Decoder.cpp  RS_Decoder.hpp  RS_Encoder.hpp  RS_tools.cpp  RS_tools.hpp
(+50 files in other folders)
